@@ -24,7 +24,10 @@ let doc = [%xtmpl.string {| <div>...</div> |} ]
   <doc href="refdoc/Xtmpl.html#VALcdata">Xtmpl.cdata</doc>,
 </li>
 <li>new <doc href="refdoc/Xtmpl_xhtml">Xtmpl_xhtml</doc> module, with convenient
-  functions to create Xhtml trees.</li>
+  functions to create Xhtml trees,</li>
+<li>new <doc href="refdoc/Xtmpl_js">Xtmpl_js</doc> module in a
+  new package <code>xtmpl.js</code>.
+</li>
 </ul>
 </li>
 
