@@ -62,6 +62,11 @@ Attributes of a XML node. Note that the content value of an attribute is
       a list of XML trees, not just a string.<br/>
 </div>
 
+
+<pre><span id="VALstring_of_name"><span class="keyword">val</span> string_of_name</span> : <code class="type"><a href="Xtmpl.html#TYPEname">name</a> -&gt; string</code></pre><div class="info ">
+<pre class="codepre"><code class="code"> string_of_name ("",s) = s
+       string_of_name (p, s) = p ^ ":" ^ s </code></pre><br/>
+</div>
 <br/>
 <div class="section-title" id="2_Constructors">Constructors</div><br/>
 
