@@ -1,0 +1,18 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<ocamldoc with-contents="true">
+<title>Xtmpl reference documentation : Xtmpl_js</title><contents><div class="ocamldoc-page">
+<div class="navbar"><a class="pre" href="Xtmpl_xhtml.html" title="Xtmpl_xhtml">Previous</a>
+&#160;<a class="up" href="index.html" title="Index">Up</a>
+&#160;</div>
+<h1>Module <a href="type_Xtmpl_js.html">Xtmpl_js</a></h1>
+
+<pre><span class="keyword">module</span> Xtmpl_js: <code class="code">sig</code> <a href="Xtmpl_js.html">..</a> <code class="code">end</code></pre><div class="info module top">
+Convenient functions to use in JS code<br/>
+</div>
+<hr width="100%"/>
+
+<pre><span id="VALdom_of_xtmpl"><span class="keyword">val</span> dom_of_xtmpl</span> : <code class="type"><a href="Xtmpl.html#TYPEtree">Xtmpl.tree</a> -&gt; Dom.node Js.t</code></pre><div class="info ">
+Create a new tree of DOM nodes from a given XML tree.
+  Errors are logged to the firebug console.<br/>
+</div>
+</div></contents></ocamldoc>
