@@ -3,7 +3,8 @@
 <title>Xtmpl reference documentation : Xtmpl_xhtml</title><contents><div class="ocamldoc-page">
 <div class="navbar"><a class="pre" href="Xtmpl.html" title="Xtmpl">Previous</a>
 &#160;<a class="up" href="index.html" title="Index">Up</a>
-&#160;</div>
+&#160;<a class="post" href="Xtmpl_js.html" title="Xtmpl_js">Next</a>
+</div>
 <h1>Module <a href="type_Xtmpl_xhtml.html">Xtmpl_xhtml</a></h1>
 
 <pre><span class="keyword">module</span> Xtmpl_xhtml: <code class="code">sig</code> <a href="Xtmpl_xhtml.html">..</a> <code class="code">end</code></pre><div class="info module top">
