@@ -18,6 +18,10 @@ Xml templating library.
 Creating XHTML nodes.
 </div>
 </td></tr>
+<tr><td class="module"><a href="Xtmpl_js.html">Xtmpl_js</a></td><td><div class="info">
+Convenient functions to use in JS code
+</div>
+</td></tr>
 </table>
 </div></contents>
 </ocamldoc>
