@@ -23,6 +23,11 @@ Sets of names.
 Xml templating library.
 </div>
 </td></tr>
+<tr><td><a href="Xtmpl_js.html">Xtmpl_js</a> </td>
+<td><div class="info">
+Convenient functions to use in JS code
+</div>
+</td></tr>
 <tr><td><a href="Xtmpl_xhtml.html">Xtmpl_xhtml</a> </td>
 <td><div class="info">
 Creating XHTML nodes.
