@@ -131,6 +131,11 @@ Empty <a href="Xtmpl.html#TYPEattributes"><code class="code">Xtmpl.attributes</c
 <td></td></tr>
 <tr><td><a href="Xtmpl_xhtml.html#VALdl">dl</a> [<a href="Xtmpl_xhtml.html">Xtmpl_xhtml</a>]</td>
 <td></td></tr>
+<tr><td><a href="Xtmpl_js.html#VALdom_of_xtmpl">dom_of_xtmpl</a> [<a href="Xtmpl_js.html">Xtmpl_js</a>]</td>
+<td><div class="info">
+Create a new tree of DOM nodes from a given XML tree.
+</div>
+</td></tr>
 <tr><td><a href="Xtmpl_xhtml.html#VALdt">dt</a> [<a href="Xtmpl_xhtml.html">Xtmpl_xhtml</a>]</td>
 <td></td></tr>
 <tr><td align="left"><br/>E</td></tr>
@@ -357,6 +362,12 @@ Return a string representation of attributes, in the form
 <tr><td><a href="Xtmpl.html#VALstring_of_env">string_of_env</a> [<a href="Xtmpl.html">Xtmpl</a>]</td>
 <td><div class="info">
 String representation of all the keys in the environment.
+</div>
+</td></tr>
+<tr><td><a href="Xtmpl.html#VALstring_of_name">string_of_name</a> [<a href="Xtmpl.html">Xtmpl</a>]</td>
+<td><div class="info">
+<pre class="codepre"><code class="code"> string_of_name ("",s) = s
+       string_of_name (p, s) = p ^ ":" ^ s </code></pre>
 </div>
 </td></tr>
 <tr><td><a href="Xtmpl.html#VALstring_of_stack">string_of_stack</a> [<a href="Xtmpl.html">Xtmpl</a>]</td>
