@@ -67,6 +67,7 @@
 &#160;&#160;&#160;&#160;&#160;&#160;<span class="constructor">E</span>&#160;<span class="keyword">of</span>&#160;<span class="constructor">Xtmpl</span>.name&#160;*&#160;<span class="constructor">Xtmpl</span>.attributes&#160;*&#160;<span class="constructor">Xtmpl</span>.tree&#160;list<br/>
 &#160;&#160;&#160;&#160;<span class="keywordsign">|</span>&#160;<span class="constructor">D</span>&#160;<span class="keyword">of</span>&#160;string<br/>
 &#160;&#160;<span class="keyword">and</span>&#160;attributes&#160;=&#160;tree&#160;list&#160;<span class="constructor">Xtmpl</span>.<span class="constructor">Name_map</span>.t<br/>
+&#160;&#160;<span class="keyword">val</span>&#160;string_of_name&#160;:&#160;<span class="constructor">Xtmpl</span>.name&#160;<span class="keywordsign">-&gt;</span>&#160;string<br/>
 &#160;&#160;<span class="keyword">val</span>&#160;node&#160;:<br/>
 &#160;&#160;&#160;&#160;<span class="constructor">Xtmpl</span>.name&#160;<span class="keywordsign">-&gt;</span>&#160;?atts:<span class="constructor">Xtmpl</span>.attributes&#160;<span class="keywordsign">-&gt;</span>&#160;<span class="constructor">Xtmpl</span>.tree&#160;list&#160;<span class="keywordsign">-&gt;</span>&#160;<span class="constructor">Xtmpl</span>.tree<br/>
 &#160;&#160;<span class="keyword">val</span>&#160;cdata&#160;:&#160;string&#160;<span class="keywordsign">-&gt;</span>&#160;<span class="constructor">Xtmpl</span>.tree<br/>
