@@ -1,0 +1,2 @@
+<ocamldoc with-contents="true"><title>Xtmpl reference documentation : Xtmpl_js</title><contents><div class="ocamldoc-page">
+<code class="code"><span class="keyword">sig</span>&#160;<span class="keyword">val</span>&#160;dom_of_xtmpl&#160;:&#160;<span class="constructor">Xtmpl</span>.tree&#160;<span class="keywordsign">-&gt;</span>&#160;<span class="constructor">Dom</span>.node&#160;<span class="constructor">Js</span>.t&#160;<span class="keyword">end</span></code></div></contents></ocamldoc>
